--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
   "author": "ananthakrishnan",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mdbreact": "^5.2.0",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "path": "^0.12.7",
+    "react-bootstrap": "^2.10.4",
+    "react-js-pagination": "^3.0.3",
+    "react-toastify": "^10.0.5",
+    "redux-thunk": "^3.1.0",
     "stripe": "^16.8.0",
     "validator": "^13.12.0"
   },
